--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
        
         e.preventDefault();
       
-        fetch('http://139.59.84.205/roles/sendData', {
+        fetch('https://coral-app-cer48.ondigitalocean.app/roles/sendData/roles/sendData', {
         method: 'POST',
         body: JSON.stringify({
             name:document.getElementById('username').value,
