Changed the max sem value

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h2 style="color: #ffffff;">Hiring Form</h2>
             </div>
             <form class="form" id="form">
-
+                 <p style="margin-bottom: 15px;margin-top: -25px;font-weight:600; align-items: center;font-size: 13px;">We're hiring interns for mobile app development(Flutter preferred)<br> Any backend framework or language (Node.js is a plus) <br> Always ready to learn.</p>
                 <div class="form-control">
                     <label>Name</label>
                     <input type="text" name="name1" id="username" placeholder="Enter Full Name" required>
@@ -140,7 +140,7 @@
 
                 <div class="form-control">
                     <label>Semester</label>
-                    <input type="number" min="1" max="8" name="semester" id="semester" placeholder="Enter Your Current Semester"
+                    <input type="number" min="1" max="4" name="semester" id="semester" placeholder="Enter Your Current Semester"
                         autocomplete="off" require>
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
