Changed the feedback requirements

--- a/index.html
+++ b/index.html
@@ -231,22 +231,22 @@
                 <form  id="contactform">
                    
                     <div class="input-container">
-                        <input type="text"  id="cname"  name="Name" class="input" />
+                        <input type="text"  id="cname"  name="Name" class="input" required/>
                         <label for="">Name</label>
                         <span>Username</span>
                     </div>
                     <div class="input-container">
-                        <input id="cemail" name="Email" type="email" name="email" class="input" />
+                        <input id="cemail" name="Email" type="email" name="email" class="input" required/>
                         <label for="">Email</label>
                         <span>Email</span>
                     </div>
                     <div class="input-container">
-                        <input  id="cphone" name="Phone No." type="tel" name="phone" class="input" />
+                        <input  id="cphone" name="Phone No." type="tel" name="phone" class="input" required/>
                         <label for="">Phone</label>
                         <span>Phone</span>
                     </div>
                     <div class="input-container textarea">
-                        <textarea  id="cmessage" name="Message" class="input"></textarea>
+                        <textarea  id="cmessage" name="Message" class="input" required></textarea>
                         <label name="message" for="">Message</label>
                         <span>Message</span>
                     </div>
