--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="form-control">
                     <label>Email</label>
                     <input type="email" name="email" id="email" placeholder="Enter Your Email" autocomplete="off"
-                        require>
+                        required>
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error Message</small>
@@ -140,8 +140,7 @@
 
                 <div class="form-control">
                     <label>Semester</label>
-                    <input type="number" min="1" max="4" name="semester" id="semester" placeholder="Enter Your Current Semester"
-                        autocomplete="off" require>
+                    <input type="number" min="1" max="4" name="semester" id="semester" placeholder="Enter Your Current Semester" autocomplete="off" required>
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error Message</small>
@@ -149,8 +148,7 @@
 
                 <div class="form-control">
                     <label>Skills</label>
-                    <input type="text" name="skills" id="skills" placeholder="Skills(Languages,Framework)" autocomplete="off"
-                        required>
+                    <input type="text" name="skills" id="skills" placeholder="Skills(Languages,Framework)" autocomplete="off" required>
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error Message</small>
@@ -167,7 +165,7 @@
                 <div class="form-control">
                     <label>Contact No</label>
                     <input type="text" name="phoneno" id="contact" placeholder="Enter Contact No" autocomplete="off"
-                        require>
+                        required>
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error Message</small>
